# smartmeter

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test_consumer.py
Archive/: README.md
Archive/dockerfile-app_telegraf/tar/: .dsc-cassandra-3.0.9-bin.tar.gz.icloud
locust/: Dockerfile  docker-compose.yml
locust/locust/: Dockerfile  smart_meter_locustfile.py
spark-app1/: Dockerfile  docker-compose.yml
spark-app1/app/: KafkaConfig.py  SparkApp1.py  StreamingProcessor.py
spark-app2/: Dockerfile  requirements.txt
spark-app2/app/: spark_app2.py
spark-app2/app/utils/: kafka_utils.py
src/app/airflow/dags/: sensor_app_job1.py  sensor_app_job2.py  sensor_app_job3.py
src/app/kafka/: test_producer.py
src/app/locust/: interpolatedProfile.py  profile.py  smart_meter_locustfile.py  temperatureProvider.py  test.py  timeProvider.py  valueProvider.py
src/app/spark/common/: __init__.py  config.py  deltaconfig.py  reader.py  utilities.py  writer.py
src/app/spark/jobs/: __init__.py  spark_app1.py  spark_app2.py  spark_app3.py  spark_app4.py  spark_app5.py
src/infra/: airflow.Dockerfile  airflow.env  hive-config.xml  hive.Dockerfile  kafka.env  locust.Dockerfile  metrics.properties  postgres-init-db.sh  postgres.Dockerfile
src/infra/prometheus/: prometheus.yml
src/scripts/: init-airflow-spark-connection.py  kafka-init-topic.sh
